plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.done'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    // Oauth2 Client
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    // thymeleaf
//    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
//    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    // Rest API
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 처리
    // Environment-Variable
    implementation "me.paulschwarz:spring-dotenv:4.0.0"
    // S3 client
    // implementation 'software.amazon.awssdk:s3:2.20.12'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
    // MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'
    // Lombok
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'


    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
}

tasks.named('test') {
    useJUnitPlatform()
}
